// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailSignupModal component renders correctly 1`] = `
<StyledComponent
  buttonConfig={Object {}}
  className=""
  formViewConfig={Object {}}
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-cJSrbW",
        "isStatic": false,
        "rules": Array [
          "
  ",
          "
  .alignRight {
    right: 14px;
    @media ",
          [Function],
          " {
      right: 16px;
    }
  }
  .alignTop {
    top: 14px;
    z-index: 1;
    @media ",
          [Function],
          " {
      top: 16px;
    }
  }
",
          ";
",
        ],
      },
      "displayName": "Styled(EmailSignupModal)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-cJSrbW",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  isEmailValid={false}
  subscription={
    Object {
      "success": false,
    }
  }
/>
`;

exports[`EmailSignupModal component renders correctly when button is clicked 1`] = `
<StyledComponent
  buttonConfig={Object {}}
  className=""
  formViewConfig={Object {}}
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-cJSrbW",
        "isStatic": false,
        "rules": Array [
          "
  ",
          "
  .alignRight {
    right: 14px;
    @media ",
          [Function],
          " {
      right: 16px;
    }
  }
  .alignTop {
    top: 14px;
    z-index: 1;
    @media ",
          [Function],
          " {
      top: 16px;
    }
  }
",
          ";
",
        ],
      },
      "displayName": "Styled(EmailSignupModal)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-cJSrbW",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  isEmailValid="invalid"
  isModalOpen={true}
  isSubscriptionValid={
    Object {
      "success": true,
    }
  }
/>
`;

exports[`EmailSignupModal component renders correctly when button is clicked 2`] = `
<StyledComponent
  buttonConfig={Object {}}
  className=""
  formViewConfig={Object {}}
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "sc-cJSrbW",
        "isStatic": false,
        "rules": Array [
          "
  ",
          "
  .alignRight {
    right: 14px;
    @media ",
          [Function],
          " {
      right: 16px;
    }
  }
  .alignTop {
    top: 14px;
    z-index: 1;
    @media ",
          [Function],
          " {
      top: 16px;
    }
  }
",
          ";
",
        ],
      },
      "displayName": "Styled(EmailSignupModal)",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "sc-cJSrbW",
      "target": [Function],
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
  isEmailValid="valid"
  isModalOpen={true}
  isSubscriptionValid={
    Object {
      "success": false,
    }
  }
/>
`;
